[package]
name = "taro_doctor"
version = "0.1.0"
edition = "2021"
authors = ["Aniwei <aniwei.studio@gmail.com>"]
description = "taro 环境检测"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
napi = { version = "=2.15.2", features = ["napi4", "tokio_rt"] }
napi-derive = { version = "=2.15.3" }
regex = { version = "=1.5.6" }

