[package]
name = "taro_shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { workspace = true }
napi = { workspace = true }
napi-derive = { workspace = true }
anyhow = { workspace = true }
handlebars = { workspace = true }
handlebars_misc_helpers = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["fs", "macros", "io-util", "process"] }
tokio-util = { workspace = true, features = ["io"] }
