[package]
name = "taro_summary"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
napi = { workspace = true }
napi-derive = { workspace = true }
once_cell = { workspace = true }
actix-files = { workspace = true }
actix-web = { workspace = true }
anyhow = { workspace = true }
ctrlc ={ workspace = true }
tokio = { workspace = true, features = ["fs", "macros", "io-util", "process"] }
tokio-util = { workspace = true, features = ["io"] }
duct = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
spinners = { workspace = true }
sysinfo = { workspace = true }
webbrowser = { workspace = true }

taro_shared = { path = "../taro_shared" }
